--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "body-parser": "^1.19.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "firebase": "^9.6.1",
+    "firebase-admin": "^10.0.1",
     "mongodb": "^4.2.2",
     "mongoose": "^6.1.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "nodemon": "^2.0.15",
     "ts-node": "^10.4.0",
-    "typescript": "^4.5.2"
+    "typescript": "^4.5.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
