--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@firebase/firestore-types": "^2.5.0",
     "@types/axios": "^0.14.0",
     "@types/express": "^4.17.13",
     "@types/mongoose": "^5.11.97",
