--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "nodemon": "^2.0.15",
+    "prettier": "^2.7.1",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.2",
     "uuid": "^8.3.2"
