--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.24.0",
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.19.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
@@ -30,6 +31,7 @@
   "devDependencies": {
     "@firebase/firestore-types": "^2.5.0",
     "@types/axios": "^0.14.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.3",
