--- a/package.json
+++ b/package.json
@@ -14,17 +14,20 @@
     "axios": "^0.24.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.19.1",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "firebase": "^9.6.1",
     "firebase-admin": "^10.0.1",
     "jsonwebtoken": "^8.5.1",
+    "leaflet": "1.8.0",
     "mongodb": "^4.2.2",
     "mongoose": "^6.1.4",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
     "nodemon": "^2.0.15",
     "prettier": "^2.7.1",
+    "splunge-common-lib": "1.0.9",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.2",
     "uuid": "^8.3.2"
@@ -33,8 +36,10 @@
     "@firebase/firestore-types": "^2.5.0",
     "@types/axios": "^0.14.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.9",
+    "@types/leaflet": "1.8.0",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.3",
     "@types/multer": "^1.4.7"
