--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.24.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.19.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
@@ -28,7 +29,7 @@
     "multer": "^1.4.4",
     "nodemon": "^2.0.15",
     "prettier": "^2.7.1",
-    "splunge-common-lib": "1.1.55",
+    "splunge-common-lib": "1.1.56",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.2",
     "uuid": "^8.3.2"
@@ -37,6 +38,7 @@
     "@firebase/firestore-types": "^2.5.0",
     "@types/axios": "^0.14.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.13",
     "@types/jsonwebtoken": "^8.5.9",
