--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon src/index.ts",
-    "build": "yarn run lint && rm -rf build/ && prettier --write src/ tsc",
+    "build": "yarn run lint && rm -rf build/ && prettier --write src/ && tsc",
     "lint": "eslint --ext .ts,.d.ts . --ignore-pattern '@types/* lib/*'",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -31,7 +31,6 @@
     "prettier": "^2.7.1",
     "splunge-common-lib": "1.1.56",
     "ts-node": "^10.4.0",
-    "typescript": "^4.5.2",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
@@ -51,6 +50,7 @@
     "@typescript-eslint/parser": "^5.48.1",
     "eslint": "^8.31.0",
     "eslint-config-prettier": "^8.6.0",
-    "eslint-plugin-jsx-a11y": "^6.7.1"
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "typescript": "^4.9.5"
   }
 }
